# VAPL

./: FLASK-LICENSE  LICENSE  LICENSES  MANIFEST.in  README.md  __init__.py  main.py  pyproject.toml  setup.cfg
VAPL/: __init__.py  main.py
VAPL/FEModules/: Web.py
VAPL/Modules/: Web.py
VAPL/static/: showText.js
VAPL/static/styles/: mainpage.css
VAPL/templates/: Executer.html  PageNotFound.html  index.html  login.html
src/: __init__.py  main.py
src/static/: code.js
src/templates/: Executer.html  docs.html  index.html
templates/: Executer.html  PageNotFound.html  index.html
