[metadata]
name = VAPL
version = 1.0.1
author = Aleks Baran
author_email = legominefan@gmail.com
description = VAPL - programming language to create voice assistants
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NotMEE12/VAPL
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True